Creaion de clase NotaUtils,correccion de actualizar datos cliente, se corrije al mostrar la informacion en las card de nota, se formatean los campos de informacion de cliente para que no sobrepase el limite. Se cambio la configuracion del archivo properties para que se onecte a la base de datos obteniendo los valores por medio de variables globales y no directamente del codigo